tests/baselines/reference/S7.8.5_A1.2_T1.errors.txt
S7.8.5_A1.2_T1.ts(23,1): error TS1010: '*/' expected.


==== S7.8.5_A1.2_T1.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionFirstChar
    info: |
      RegularExpressionChars ::
        [empty]
        RegularExpressionCharsRegularExpressionChar
    
      RegularExpressionFirstChar ::
        RegularExpressionNonTerminator but not one of * or \ or / or [
    
    description: >
      The first character of a regular expression may not be "*"
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /*/
    
    
!!! error TS1010: '*/' expected.